--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
